--- a/Netbox-install/01.Netbox-3.7.8.md
+++ b/Netbox-install/01.Netbox-3.7.8.md
@@ -75,7 +75,7 @@ easy_install-3.6 pip
   ```
   install -y wget
   wget https://github.com/netbox-community/netbox/archive/refs/tags/v3.7.8.tar.gz
-  sudo tar -xzf /tmp/v3.7.8.tar.gz -C /opt
+  sudo tar -xzf v3.7.8.tar.gz -C /opt
   sudo ln -s /opt/netbox-3.7.8/ /opt/netbox
   ```
 - Tạo user Netbox và chuyển chủ sở hữu cho thư mục netbox
@@ -87,8 +87,8 @@ easy_install-3.6 pip
   ```
 - Tạo file configuaration.py
   ```
-  cd /opt/netbox/netbox/netbox/netbox/
-  cp configuration.example.py configuration.py
+  cd /opt/netbox/netbox/netbox
+  cp configuration_example.py configuration.py
   ```
 - Tạo a secret key
   ```
