--- a/Netbox-sync/02.install-nb-sync.md
+++ b/Netbox-sync/02.install-nb-sync.md
@@ -111,6 +111,8 @@ Những thiết bị mà Netbox Sync có thể đồng bộ được
   host_fqdn = 172.16.66.124
   port = 8000
   disable_tls = True
+  prune_enabled = True
+  prune_delay_in_days = 0
   [source/vcenter-name]
   type = vmware
   host_fqdn = đã che
@@ -128,6 +130,8 @@ Những thiết bị mà Netbox Sync có thể đồng bộ được
   - host_fqdn = 172.16.66.124 : IP của Netbox Server
   - port = 8000 : Ta có thể thay đổi port ứng với port mà Netbox sử dụng
   - disable_tls = True : Do netbox của mình dùng http nên ko cần tsl
+  - prune_enabled = True : Cho phép xóa máy ảo không tồn tại
+  - prune_delay_in_days = 0 : Thời gian delay là 0 ngày, có thể thay đổi
   - type = vmware : phân biệt vmware
   - host_fqdn = đã che : tên miền hoặc IP kết nối đến vcenter
   - username = Khai báo user đăng nhập vcenter
