--- a/Netbox-sync/02.install-nb-sync.md
+++ b/Netbox-sync/02.install-nb-sync.md
@@ -138,6 +138,31 @@ Những thiết bị mà Netbox Sync có thể đồng bộ được
   - password = Pass
   permitted_subnets = 172.16.66.0/24, 172.16.67.0/24, 172.16.68.0/24, 172.16.69.0/24, 192.168.99.0/24 : Ta khai báo dòng này để khi sync các máy ảo sẽ hiển thị được các địa chỉ IP trùng với dải mạng này
   - Phần check_redfish cũng tương tự
+- Đối với ssl local ta có thể sủa như sau:
+  ```
+  [common]
+  log_level = DEBUG2
+  [netbox]
+  api_token = đã che 
+  host_fqdn = 172.16.66.124
+  port = 443
+  disable_tls = False
+  validate_tls_certs = True
+  client_cert = client.pem
+  client_cert_key = client.key
+  prune_enabled = True
+  prune_delay_in_days = 0
+  [source/vcenter-name]
+  type = vmware
+  host_fqdn = đã che
+  username = đã che
+  password = đã che
+  permitted_subnets = 172.16.66.0/24, 172.16.67.0/24, 172.16.68.0/24, 172.16.69.0/24, 192.168.99.0/24
+  [source/my-redfish-example]
+  type = check_redfish
+  inventory_file_path = /opt/netbox-sync/check_redfish
+  permitted_subnets = 172.16.66.0/24, 172.16.67.0/24, 172.16.68.0/24, 172.16.69.0/24, 192.168.99.0/24
+  ```
 - Sau khi tạo file cấu hình xong ta sẽ tiến hành chạy
   ```
   ./netbox-sync.py -c vcenter-addc-local.ini
