--- a/Netbox-sync/02.install-nb-sync.md
+++ b/Netbox-sync/02.install-nb-sync.md
@@ -171,6 +171,13 @@ Những thiết bị mà Netbox Sync có thể đồng bộ được
   ![](../anh/Screenshot_39.png)
 
 Như vậy là ta đã hoàn thành đồng bộ dữ liệu trên vCenter vào Netbox bằng netbox-sync
+- Để có thể sync dữ liệu của netbox một cách tự động ta cần lập lịch bằng crontab
+  ```
+  crontab -e
+  ```
+  ```
+  1 * * * * /bin/bash -c 'source /opt/netbox-sync/.venv/bin/activate && /opt/netbox-sync/.venv/bin/python3 /opt/netbox-sync/netbox-sync.py -c /opt/netbox-sync/vcenter-addc-local.ini'
+  ```
 # Tài liệu tham khảo
 https://github.com/huydv398/netbox-sync
 
