--- a/Netbox-install/01.Netbox-3.7.8.md
+++ b/Netbox-install/01.Netbox-3.7.8.md
@@ -143,6 +143,10 @@ easy_install-3.6 pip
         }
     }
   ```
+- Ta cũng cần thay đổi timezone Việt Name
+  ```
+  TIME_ZONE = 'Asia/Ho_Chi_Minh'
+  ```
 - Cài đặt Netbox
   ```
   /opt/netbox/netbox/upgrade.sh
