--- a/Netbox-sync/02.install-nb-sync.md
+++ b/Netbox-sync/02.install-nb-sync.md
@@ -109,8 +109,9 @@ Những thiết bị mà Netbox Sync có thể đồng bộ được
   [netbox]
   api_token = đã che 
   host_fqdn = 172.16.66.124
-  port = 8000
-  disable_tls = True
+  port = 443
+  disable_tls = False
+  validate_tls_certs = False
   prune_enabled = True
   prune_delay_in_days = 0
   [source/vcenter-name]
@@ -129,7 +130,8 @@ Những thiết bị mà Netbox Sync có thể đồng bộ được
   - api_token = đã che : là api token của netbox
   - host_fqdn = 172.16.66.124 : IP của Netbox Server
   - port = 8000 : Ta có thể thay đổi port ứng với port mà Netbox sử dụng
-  - disable_tls = True : Do netbox của mình dùng http nên ko cần tsl
+  - disable_tls = False : Do netbox của mình dùng https nên ko cần tsl
+  - validate_tls_certs = False : Nó tương tự option -k trong lệnh curl vậy
   - prune_enabled = True : Cho phép xóa máy ảo không tồn tại
   - prune_delay_in_days = 0 : Thời gian delay là 0 ngày, có thể thay đổi
   - type = vmware : phân biệt vmware
@@ -165,6 +167,7 @@ Những thiết bị mà Netbox Sync có thể đồng bộ được
   ```
 - Sau khi tạo file cấu hình xong ta sẽ tiến hành chạy
   ```
+  cd /opt/netbox-sync
   ./netbox-sync.py -c vcenter-addc-local.ini
   ```
 - Ta đợi Netbox Sync chạy đồng bộ xong sẽ có kết quả
